Complete Experience Section and Fix Viewport Bug on Mobile

--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -1,3 +1,6 @@
+
+/* main container */
+
 .about__container {
   display: grid;
   grid-template-columns: 35% 50%;
@@ -5,11 +8,13 @@
   height: 100%;
   position: relative;
 }
+/* controls the h2 properties */
 
 #about > h2 {
   color: var(--color-primary);
 }
 
+/* Main container for the image */
 .about_me {
   width: 100%;
   /* ensures the height is the same as the width */
@@ -36,6 +41,7 @@
     transform: rotate(0deg);
 }
 
+/*  */
 .about__cards{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -74,12 +80,20 @@
 
 .about__card small{
   font-size: 0.7rem;
+  font-weight: 400;
   color: var(--color-light);
 }
 
 .about__content p{
   margin: 2rem  0 2.6rem;
 }
+
+/* =============== LARGE DEVICES ==============
+@media screen and (min-width: 1024px){
+  #about{
+    height: 100vh;
+  }
+} */
 
 /* ************* MEDIUM DEVICES **************** */
 @media screen and (max-width:1024px){
@@ -88,15 +102,22 @@
     gap:0;
   }
 
+  
   .about_me{
     width:50%;
     margin:2rem auto 4rem;
   }
 
+  .about__content{
+    text-align: center;;
+  }
+
   .about__content p{
     margin: 1rem 0 1.5rem;
   }
-}
+
+  }
+
   
 /* ************* SMALL DEVICES **************** */
 @media screen and (max-width: 600px){
@@ -119,8 +140,6 @@
     margin: 1.5rem 0;
   }
 
-  .talk{
-    margin: 0 auto;
-  }
+  
 }
 
