--- a/src/index.css
+++ b/src/index.css
@@ -53,9 +53,7 @@ body {
   line-height: 1.7;
   background-color: var(--bg-color);
   color: var(--color-white);
-  /* height: 100vh; */
-  /* background: rgb(227,255,231); */
-  /* background-image: var(--bg-color-gradient); */
+  
 
 }
 
@@ -76,7 +74,7 @@ h1{
 
 section{
   margin-top: 8rem;
-  height: 100vh;
+  /* height: 100vh; */
 }
 
 section > h2, h5 {
